# experimental-datafusion-webassembly

./: Cargo.toml  README.md  arrow-rs.patch  datafusion.patch  getrandom.patch  inspect-wat.sh  instant.patch  more_links.md
dfwasm/: Cargo.toml  README.md  datafusion.patch
dfwasm/src/: lib.rs  main.rs
src/: lib.rs
www/: index.js  package-lock.json  package.json
