# Enable the version 2 feature resolver, which avoids unifying features for targets that are not being built
#
# Critically this prevents dev-dependencies from enabling features even when not building a target that
# uses dev-dependencies, e.g. the library crate. This in turn ensures that we can catch invalid feature
# flag combinations that would otherwise only surface in dependent crates
#
# Reference - https://doc.rust-lang.org/nightly/cargo/reference/features.html#feature-resolver-version-2
#
resolver = 2

[package]
name = "dfwasm"
version = "0.1.0"
edition = "2021"


[package.metadata.wasm-pack.profile.dev]
wasm-opt = false   # wasm-opt is coredumping

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false   # wasm-opt is coredumping

[package.metadata.wasm-pack.profile.release]
wasm-opt = false   # wasm-opt is coredumping

[lib]
crate-type = ["cdylib"]

[dependencies]
# tokio = { default_features = false, features = ["macros", "rt", "signal"] }
# parquet = { default-features = false, features = ["arrow", "snap", "brotli", "flate2", "base64"]  }
# datafusion-expr = { git = "https://github.com/apache/arrow-datafusion", rev = "784f10bb57f86a4db2e01a6cb51da742af0dd9d9" }
# datafusion-proto = { git = "https://github.com/apache/arrow-datafusion", rev = "784f10bb57f86a4db2e01a6cb51da742af0dd9d9" }
tokio = { version = "1.0", features = ["sync","macros","io-util","rt","time"] }

tokio-stream = { version = "0.1", default_features = false, features = [] } # note: duplicated in datafusion/core/Cargo.toml

reqwest = { version = "0.11.16", features = ["json", "stream"] }
datafusion-expr = { path = "../../arrow-datafusion/datafusion/expr" }
datafusion-proto = { path = "../../arrow-datafusion/datafusion/proto" }

# for web
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = {version = "0.3.60", features = ["Window", "Document", "HtmlElement", "Node", "Text", "DateTimeValue", 'Performance', 'PerformanceTiming'] }


# arrow = { git = "https://github.com/apache/arrow-rs", rev = "87ac05bcafd343d3d8ad3b519631d83090afeb1c" }
arrow = { path = "../../arrow-rs/arrow" }

instant = { path = "../../instant" }


# note: developing with local repo to add patch to 784f10bb57f86a4db2e01a6cb51da742af0dd9d9
[dependencies.datafusion]
# git = "https://github.com/apache/arrow-datafusion"
# rev = "784f10bb57f86a4db2e01a6cb51da742af0dd9d9"
path = "../../arrow-datafusion/datafusion/core"
default-features = false
features = ["regex_expressions", "unicode_expressions", "object_store"] # -crypto_expressions, -object_storeX+

[dependencies.datafusion-common]
path = "../../arrow-datafusion/datafusion/common"
default-features = false
features = ["apache-avro", "parquet"] # -object_store, -"cranelift-module", -"pyo3", "object_store"

[patch.crates-io]
# datafusion = { git = "../../arrow-datafusion", rev = "784f10bb57f86a4db2e01a6cb51da742af0dd9d9" }
# datafusion-expr = { git = "../../arrow-datafusion", rev = "784f10bb57f86a4db2e01a6cb51da742af0dd9d9" }
# datafusion-proto = { git = "../../arrow-datafusion", rev = "784f10bb57f86a4db2e01a6cb51da742af0dd9d9" }
datafusion = { path = "../../arrow-datafusion/datafusion/core"}
datafusion-common = { path = "../../arrow-datafusion/datafusion/common"}
datafusion-expr = { path = "../../arrow-datafusion/datafusion/expr"}
datafusion-jit = { path = "../../arrow-datafusion/datafusion/jit"}
datafusion-optimizer = { path = "../../arrow-datafusion/datafusion/optimizer"}
datafusion-physical-expr = { path = "../../arrow-datafusion/datafusion/physical-expr"}
datafusion-proto = { path = "../../arrow-datafusion/datafusion/proto"}
datafusion-row = { path = "../../arrow-datafusion/datafusion/row"}
datafusion-sql = { path = "../../arrow-datafusion/datafusion/sql"}

# https://github.com/samdenty/reqwest adds tokio features but names the package reqwest-wasm
# https://github.com/milesforks/reqwest renames package to reqwest and bumps version
reqwest = { version = "0.11.16", git = "https://github.com/milesforks/reqwest" }


# Arrow (https://github.com/apache/arrow-rs)
arrow = { path = "../../arrow-rs/arrow" }
arrow-array = { path = "../../arrow-rs/arrow-array" }
arrow-buffer = { path = "../../arrow-rs/arrow-buffer" }
arrow-data = { path = "../../arrow-rs/arrow-data" }
arrow-flight = { path = "../../arrow-rs/arrow-flight" }
arrow-schema = { path = "../../arrow-rs/arrow-schema" }
arrow-select = { path = "../../arrow-rs/arrow-select" }
parquet = { path = "../../arrow-rs/parquet" }
parquet_derive = { path = "../../arrow-rs/parquet_derive" }
parquet_derive_test = { path = "../../arrow-rs/parquet_derive_test" }
object_store = { path = "../../arrow-rs/object_store" }

# arrow = { git = "https://github.com/apache/arrow-rs", rev = "87ac05bcafd343d3d8ad3b519631d83090afeb1c" }
# arrow-array = { git = "https://github.com/apache/arrow-rs", rev = "87ac05bcafd343d3d8ad3b519631d83090afeb1c" }
# arrow-buffer ={ git = "https://github.com/apache/arrow-rs", rev = "87ac05bcafd343d3d8ad3b519631d83090afeb1c" }
# arrow-data = { git = "https://github.com/apache/arrow-rs", rev = "87ac05bcafd343d3d8ad3b519631d83090afeb1c" }
# arrow-flight ={ git = "https://github.com/apache/arrow-rs", rev = "87ac05bcafd343d3d8ad3b519631d83090afeb1c" }
# arrow-schema ={ git = "https://github.com/apache/arrow-rs", rev = "87ac05bcafd343d3d8ad3b519631d83090afeb1c" }
# arrow-select ={ git = "https://github.com/apache/arrow-rs", rev = "87ac05bcafd343d3d8ad3b519631d83090afeb1c" }
# parquet = { git = "https://github.com/apache/arrow-rs", rev = "87ac05bcafd343d3d8ad3b519631d83090afeb1c" }
# parquet_derive ={ git = "https://github.com/apache/arrow-rs", rev = "87ac05bcafd343d3d8ad3b519631d83090afeb1c" }
# parquet_derive_test = {git = "https://github.com/apache/arrow-rs", rev = "87ac05bcafd343d3d8ad3b519631d83090afeb1c" }
# object_store ={ git = "https://github.com/apache/arrow-rs", rev = "87ac05bcafd343d3d8ad3b519631d83090afeb1c" }

getrandom = { path = "../../getrandom"}
instant = { path = "../../instant" }
